cmake_minimum_required(VERSION 3.19)
project(advent_of_code)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(day1/part1/cpp)
add_subdirectory(day1/part2/cpp)
add_subdirectory(day2/part1/cpp)
add_subdirectory(day2/part2/cpp)
add_subdirectory(day3/part1/cpp)
add_subdirectory(day3/part2/cpp)
add_subdirectory(day4/part1/cpp)